ecmascript/parser/tests/test262-error-references/fail/0eb4ed330b5d7e2f.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/0eb4ed330b5d7e2f.js:1:1
  |
1 | ({get a(){}})=0
  | ^^^^^^^^^^^^^

